--- a/src/views/login.html
+++ b/src/views/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../styles/tailwind.css" rel="stylesheet">
+    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <title>Login</title>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
